--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 <% end -%>
 	<%= stylesheet_link_tag :all %>
 	<%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'jquery.uploadProgress' %>
 	<%= csrf_meta_tag %>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 </head>
