--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 	<%= stylesheet_link_tag :all, :cache => true %>
 	<%= javascript_include_tag :defaults, :cache => true %>
 	<%= csrf_meta_tag %>
+    <%= yield(:head) %>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 </head>
 <body>
