--- a/app/views/reset_password/_message.de.html.erb
+++ b/app/views/reset_password/_message.de.html.erb
@@ -1,2 +1,2 @@
-Geben Sie ihre E-Mail Adresse ein um eine Anleitung zur<br>
+Geben Sie Ihre E-Mail Adresse ein um eine Anleitung zur<br>
 Rücksetzung Ihres Kennworts zu erhalten.
