Removed superfluous success variable in upload handling

--- a/app/views/files/new.html.erb
+++ b/app/views/files/new.html.erb
@@ -8,7 +8,7 @@
         var allSucceeded = true;
         
         function uploadComplete() {
-            // redirect to the list of recently uploaded tracks
+            // redirect to the list of recently uploaded files
             if (allSucceeded) {
                 window.location = '<%= folder_path(@target_folder) %>';
             }
